--- a/src/app/pub/components/city-select/city-select.component.html
+++ b/src/app/pub/components/city-select/city-select.component.html
@@ -1,3 +1,3 @@
-<p>
-  city-select works!
-</p>
+<nz-select [nzSize]="'default'" [(ngModel)]="currentValue" (change)="onValueSelected()">
+  <nz-option *ngFor="let item of cityArray$ | async " [nzLabel]="item.cityName" [nzValue]="item"></nz-option>
+</nz-select>
