--- a/src/app/account/singin/singin.component.html
+++ b/src/app/account/singin/singin.component.html
@@ -2,7 +2,7 @@
 
 <div id="loginWrap">
   <div class="loginHeader text-center">
-     平 台
+    麦 博 睿 微 习 惯 管 理 平 台
   </div>
   <div id="loginContent">
     <form nz-form class="loginForm">
@@ -10,7 +10,7 @@
       <nz-form-item class="m-t-lg">
         <nz-form-control>
           <nz-input-group nzPrefixIcon="anticon anticon-user">
-            <input type="text" nz-input [(ngModel)]="user.userId" [ngModelOptions]="{standalone: true}" placeholder="账号">
+            <input type="text" nz-input [(ngModel)]="user.account" [ngModelOptions]="{standalone: true}" placeholder="账号">
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
@@ -24,7 +24,7 @@
 
       <nz-form-item class="m-t-lg">
         <nz-form-control>
-          <button  class="login-form-button"  nz-button  nzType="primary" [disabled]="user.userId==''"  [nzLoading]="loading" (click)="onLogin()"  >登录</button>
+          <button  class="login-form-button"  nz-button  nzType="primary" [disabled]="user.account==''"  [nzLoading]="loading" (click)="onLogin()"  >登录</button>
         </nz-form-control>
       </nz-form-item>
     </form>
