--- a/src/app/corp/basemsg/circle/circle.component.html
+++ b/src/app/corp/basemsg/circle/circle.component.html
@@ -1,3 +1,82 @@
-<p>
-  circle works!
-</p>
+
+<div nz-row>
+  <div nz-col [nzSpan]="8">
+    <nz-form-item>
+      <nz-form-label [nzSpan]="6">学校</nz-form-label>
+      <nz-form-control [nzSpan]="15">
+        <input nz-input [(ngModel)]="queryParams.paperId">
+      </nz-form-control>
+    </nz-form-item>
+  </div>
+  <div nz-col [nzSpan]="8">
+    <nz-form-item>
+      <nz-form-label [nzSpan]="6">习惯圈</nz-form-label>
+      <nz-form-control [nzSpan]="15">
+        <input nz-input [(ngModel)]="queryParams.studentName">
+      </nz-form-control>
+    </nz-form-item>
+  </div>
+  <div nz-col [nzSpan]="8">
+    <nz-form-item>
+      <nz-form-label [nzSpan]="6">年龄段:</nz-form-label>
+      <nz-form-control [nzSpan]="9">
+        <nz-input-number [(ngModel)]="queryParams.ageBegin" [nzMin]="1" [nzMax]="15" [nzStep]="1"></nz-input-number>
+      </nz-form-control>
+      <nz-form-control [nzSpan]="9">
+        <nz-input-number [(ngModel)]="queryParams.ageEnd" [nzMin]="1" [nzMax]="15" [nzStep]="1"></nz-input-number>
+      </nz-form-control>
+    </nz-form-item>
+  </div>
+</div>
+
+
+<div class="m-t-sm text-center" nz-row>
+  <div nz-col [nzSpan]="24" class="text-center">
+    <a href="javaScript:;" class="ant-btn ant-btn-primary" (click)="onQuery()">查询</a>
+    <a class="ant-btn ant-btn-primary m-l-xs" download="学生资源.xls" *ngIf="user.isSupperAdmin "  >excel导出</a>
+  </div>
+</div>
+<div class="m-t-sm" nz-row>
+  <div nz-col [nzSpan]="24">
+    <nz-table
+      #ajaxTable
+      nzBordered
+      nzShowSizeChanger
+      [nzFrontPagination]="false"
+      [nzData]="studentList$ | async"
+      [nzTotal]="total"
+      [(nzPageIndex)]="queryParams.pageNo"
+      [(nzPageSize)]="queryParams.pageSize"
+      (nzPageIndexChange)="onPageChange($event)"
+    >
+      <thead >
+      <tr>
+        <th>序号</th>
+        <th>身份证</th>
+        <th>姓名</th>
+        <th>年龄</th>
+        <th>性别</th>
+        <th>地址</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let data of ajaxTable.data ;let no=index">
+        <td>{{no+1}}</td>
+        <td>{{data.paperId}}</td>
+        <td>{{data.studentName}}</td>
+        <td>{{data}}</td>
+        <td>{{data.district?.districtName}}</td>
+        <td>{{data.address | cutSizePipe:18}}</td>
+        <td>{{data.saleMan.employeeName}}</td>
+        <td>{{data.regTime | date: 'yyyy-MM-dd' }}</td>
+
+        <td>
+          <a href="javaScript:;" *ngIf="user.isSupperAdmin " (click)="onEdit(data)">修改</a>
+          <nz-divider nzType="vertical"></nz-divider>
+          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onDelete(data)">删除</a>
+        </td>
+      </tr>
+      </tbody>
+    </nz-table>
+  </div>
+</div>
