--- a/src/app/mainframe/frame/frame.component.html
+++ b/src/app/mainframe/frame/frame.component.html
@@ -1,7 +1,7 @@
 
 <nz-layout class="layout">
   <nz-header style="background: #2A6FA8;position:fixed; width:100%;z-index:999">
-    <h3 class="logo text-center" >平台</h3>
+    <h3 class="logo text-center" >麦 博 睿 微 习 惯 管 理 平 台</h3>
   </nz-header>
   <nz-layout>
     <nz-sider [nzWidth]="200" style="background:#fff;overflow: auto; height: 100vh; position: fixed; left: 0;top:64px;">
