--- a/src/app/pub/components/win-school/win-school.component.html
+++ b/src/app/pub/components/win-school/win-school.component.html
@@ -32,7 +32,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">所在市</nz-form-label>
           <nz-form-control [nzSpan]="17">
-           {{currentSchool.district.city.cityName}}
+           {{currentSchool.district?.city.cityName}}
           </nz-form-control>
         </nz-form-item>
       </div>
@@ -58,7 +58,7 @@
         <nz-form-item>
           <nz-form-label [nzSpan]="6">业务员</nz-form-label>
           <nz-form-control [nzSpan]="17">
-           <app-employee-select [ngModel]="currentSchool.saleMan.paperId" ></app-employee-select>
+           <app-employee-select [ngModel]="currentSchool.saleMan?.paperId" ></app-employee-select>
           </nz-form-control>
         </nz-form-item>
       </div>
