--- a/src/app/corp/basemsg/student/student.component.html
+++ b/src/app/corp/basemsg/student/student.component.html
@@ -57,6 +57,7 @@
         <th>年龄</th>
         <th>性别</th>
         <th>地址</th>
+        <th>联系电话</th>
       </tr>
       </thead>
       <tbody>
@@ -64,22 +65,14 @@
         <td>{{no+1}}</td>
         <td>{{data.paperId}}</td>
         <td>{{data.studentName}}</td>
-        <td>{{data}}</td>
-        <td>{{data.district?.districtName}}</td>
-        <td>{{data.address | cutSizePipe:18}}</td>
-        <td>{{data.saleMan.employeeName}}</td>
-        <td>{{data.regTime | date: 'yyyy-MM-dd' }}</td>
-
-        <td>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin " (click)="onEdit(data)">修改</a>
-          <nz-divider nzType="vertical"></nz-divider>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onDelete(data)">删除</a>
-        </td>
+        <td>{{commonsvr.paperIdMsg(data.paperId,3)}}</td>
+        <td>{{commonsvr.paperIdMsg(data.paperId,2)}}</td>
+        <td>{{data.address }}</td>
+        <td>{{data.tel}}</td>
       </tr>
       </tbody>
     </nz-table>
   </div>
 </div>
 
-<app-win-school [schoolWinOrder$]="schoolWinOrder$" (onSchoolSaved)="onSaved($event)"></app-win-school>
 
