--- a/src/app/corp/basemsg/teacher/teacher.component.html
+++ b/src/app/corp/basemsg/teacher/teacher.component.html
@@ -63,7 +63,7 @@
         <td>{{data.teacherName}}</td>
         <td>{{data.duty}}</td>
         <td>{{data.tel}}</td>
-        <td>{{data.onserve.school}}</td>
+        <td>{{data.onserve.school.schoolName}}</td>
       </tr>
       </tbody>
     </nz-table>
