--- a/src/app/corp/basemsg/circle/circle.component.html
+++ b/src/app/corp/basemsg/circle/circle.component.html
@@ -4,7 +4,7 @@
     <nz-form-item>
       <nz-form-label [nzSpan]="6">学校类别</nz-form-label>
       <nz-form-control [nzSpan]="15">
-        <nz-select [(ngModel)]="currentValue" class="form-input fullWidth">
+        <nz-select [(ngModel)]="queryParams.schoolstyle" class="form-input fullWidth">
           <nz-option [nzValue]="'0'" nzLabel="全部"></nz-option>
           <nz-option [nzValue]="'1'" nzLabel="全日制学校"></nz-option>
           <nz-option [nzValue]="'2'" nzLabel="培训机构"></nz-option>
@@ -16,7 +16,7 @@
     <nz-form-item>
       <nz-form-label [nzSpan]="6">学校</nz-form-label>
       <nz-form-control [nzSpan]="15">
-        <input nz-input [(ngModel)]="queryParams.schoolName">
+        <input  nz-input [(ngModel)]="queryParams.schoolName">
       </nz-form-control>
     </nz-form-item>
   </div>
@@ -72,7 +72,7 @@
       nzBordered
       nzShowSizeChanger
       [nzFrontPagination]="false"
-      [nzData]="studentList$ | async"
+      [nzData]="circleList$ | async"
       [nzTotal]="total"
       [(nzPageIndex)]="queryParams.pageNo"
       [(nzPageSize)]="queryParams.pageSize"
@@ -81,26 +81,30 @@
       <thead >
       <tr>
         <th>序号</th>
-        <th>身份证</th>
-        <th>姓名</th>
-        <th>年龄</th>
-        <th>性别</th>
-        <th>地址</th>
+        <th>学校</th>
+        <th>班级</th>
+        <th>圈名</th>
+        <th>创建人</th>
+        <th>创建日期</th>
+        <th>圈内教师数</th>
+        <th>圈内学生数</th>
+        <th>状态</th>
+        <th>操作</th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let data of ajaxTable.data ;let no=index">
         <td>{{no+1}}</td>
-        <td>{{data.paperId}}</td>
-        <td>{{data.studentName}}</td>
-        <td>{{data}}</td>
-        <td>{{data.district?.districtName}}</td>
-        <td>{{data.address | cutSizePipe:18}}</td>
-        <td>{{data.saleMan.employeeName}}</td>
-        <td>{{data.regTime | date: 'yyyy-MM-dd' }}</td>
-
+        <td>{{data.school.schoolName}}</td>
+        <td>{{ commonsvr.calculateGradePrimarySchool(data.classes.grade) +'年级' + data.classes.classes +'班'}}</td>
+        <td>{{data.circleName}}</td>
+        <td>{{data.buildMan.teacherName}}</td>
+        <td>{{data.buildDate | date :'yyyy-MM-dd'}}</td>
+        <td>{{data.teachers.length}}</td>
+        <td>{{data.students.length }}</td>
+        <td>{{data.closeMan ? '已关闭' :'活跃' }}</td>
         <td>
-          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onClose(data)">强制关闭</a>
+          <a href="javaScript:;" *ngIf="user.isSupperAdmin" (click)="onCloseCircle(data)">强制关闭</a>
         </td>
       </tr>
       </tbody>
